--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "ms-shaimaa-lms",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "Smart English Platform for Ms. Shaimaa Faisal",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
-    "fs-extra": "^11.1.1"
-  }
-
+"dependencies": {
+  "bcryptjs": "^2.4.3",
+  "cors": "^2.8.5",
+  "express": "^4.18.2",
+  "multer": "^1.4.5-lts.1",
+  "@supabase/supabase-js": "^2.39.0"
+}
 }
